# mgl

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  format  makefile
bench/: CMakeLists.txt  gl_bench.cpp
bench/scene/min/: baabbgrid.h  baabbtree.h  bmd5.h  bmesh.h  bphysics.h  bray.h  bspatial.h  bsphgrid.h  bsphtree.h  bvector.h  bwavefront.h
data/models/: bob.md5anim  bob.md5mesh  mech_warrior.md5anim  mech_warrior.md5mesh  mech_warrior_jump.md5anim  mech_warrior_spin.md5anim  mech_warrior_walk.md5anim
data/shader/: color.fragment  color.vertex  emitter.fragment  emitter.vertex  height_map.fragment  height_map.tcs  height_map.tes  height_map.vertex  instance.fragment  instance.vertex  light.fragment  light.vertex  md5.fragment  md5.vertex  shadow1.fragment  shadow1.vertex  shadow2.fragment  shadow2.vertex  text.fragment  text.vertex  texture.fragment  texture.vertex  ui.fragment  ui.vertex
data/texture/: cube.dds  stone.dds  winter_moon.dds
example/programs/: ex1.cpp  ex10.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
examples/: CMakeLists.txt  ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
scripts/arch/: install_deps.sh
scripts/ubuntu_14_04_1/: fglrx.sh  gcc-6.sh  install_deps.sh
source/: lib.cpp  mingl.h  minwl.h
source/cpp/: aabbox.cpp  array_buffer.cpp  bit_flag.cpp  bmp.cpp  camera.cpp  convert.cpp  dds.cpp  emitter_buffer.cpp  frustum.cpp  grid.cpp  intersect.cpp  light.cpp  loop_sync.cpp  mat2.cpp  mat3.cpp  mat4.cpp  md5_anim.cpp  md5_mesh.cpp  md5_model.cpp  mem_chunk.cpp  mesh.cpp  model.cpp  ogg.cpp  oobbox.cpp  physics.cpp  physics_nt.cpp  plane.cpp  program.cpp  quat.cpp  ray.cpp  sample.cpp  serial.cpp  serial_mem.cpp  settings.cpp  shader.cpp  shadow_buffer.cpp  sort.cpp  sound_buffer.cpp  sphere.cpp  text_buffer.cpp  (+12 more)
source/file/min/: bmp.h  dds.h  md5_anim.h  md5_mesh.h  mem_chunk.h  ogg.h  serial.h  serial_mem.h  strtoken.h  wave.h  wavefront.h
source/geom/min/: aabbox.h  convert.h  frustum.h  intersect.h  mesh.h  oobbox.h  plane.h  ray.h  sphere.h
source/math/min/: bi.h  bit_flag.h  coord_sys.h  cubic.h  mat2.h  mat3.h  mat4.h  quat.h  sample.h  sort.h  tran2.h  tran3.h  tri.h  utility.h  vec2.h  vec3.h  vec4.h
source/opt/min/: equation.h  evolution.h  mat.h  mult.h  nn.h  nneat.h  nnet.h  numeric.h  system.h  vec.h
source/platform/min/: glew.cpp  glxew.h  keyboard.h  sdl_window.h  settings.h  texture_compressor.h  win32_window.h  window.h  x_window.h
source/renderer/min/: array_buffer.h  dynamic_vertex.h  emitter_buffer.h  gl_type.h  loop_sync.h  program.h  shader.h  shadow_buffer.h  skeletal_vertex.h  static_vertex.h  stream_vertex.h  text_buffer.h  texture_buffer.h  texture_compressor.h  ui_vertex.h  uniform_buffer.h  vertex_buffer.h
source/scene/min/: camera.h  grid.h  light.h  md5_model.h  model.h  physics.h  physics_nt.h  template_math.h  tree.h
source/sound/min/: sound_buffer.h
source/util/min/: height_map.h  stack_vector.h  static_vector.h  thread_pool.h
test/: CMakeLists.txt  al_test.cpp  gl_test.cpp  wl_test.cpp
test/file/min/: tbmp.h  tdds.h  tmd5anim.h  tmd5mesh.h  tmem_chunk.h  togg.h  tserial.h  twave.h  twavefront.h
test/geom/min/: taabbox.h  taabboxinter.h  taabbresolve.h  tfrustinter.h  tfrustum.h  toobbox.h  toobboxinter.h  toobbresolve.h  tplane.h  tray.h  tsphere.h  tsphinter.h  tsphresolve.h
test/math/min/: tbit_flag.h  tbitflag.h  tcubic.h  tmat2.h  tmat3.h  tmat4.h  tquat.h  tsample.h  tsort.h  ttran2.h  ttran3.h  tuint_sort.h  tvec2.h  tvec3.h  tvec4.h
test/opt/min/: tequation.h  tevolution_neat.h  tmat.h  tmult.h  tneat.h  tnnet.h  tsystem.h  tvec.h
test/platform/min/: test.h  twindow.h
test/renderer/min/: trenderer_alignment.h  tstatic_instance.h  ttessellation.h  ttexture_buffer.h  ttexture_compressor.h  tuniform_buffer.h
test/scene/min/: taabbgrid.h  taabbtree.h  tcamera.h  tmd5model.h  tmodel.h  tphysics.h  tphysics_nt.h  traygrid.h  traytree.h  tsphgrid.h  tsphtree.h
test/sound/min/: tsound_buffer.h
test/util/min/: theight_map.h  tstack_vector.h  tstatic_vector.h  tthread_pool.h
