# Example 1
add_executable("ex1")
add_opengl("ex1")

# Example 2
add_executable("ex2")
add_opengl("ex2")

# Example 3
add_executable("ex3")
add_opengl("ex3")

# Example 4
add_executable("ex4")
add_opengl("ex4")

# Example 5
add_executable("ex5")
add_opengl("ex5")
add_freetype("ex5")

# Example 6
add_executable("ex6")
add_opengl("ex6")

# Example 7
add_executable("ex7")
add_opengl("ex7")

# Example 8
add_executable("ex8")
add_opengl("ex8")

# Example 9
add_executable("ex9")
add_opengl("ex9")

# Example 10
add_executable("ex10")
add_opengl("ex10")
